Changed text, spacing, on homescreen. Added preventDefault() to the demo button.

--- a/app/assets/stylesheets/home_screen.scss
+++ b/app/assets/stylesheets/home_screen.scss
@@ -2,6 +2,7 @@
 
     p{
         line-height: 25px;
+        margin-top: 20px;
     }
     
     h3{
@@ -18,6 +19,16 @@
         & > * {
             margin-bottom: 20px;
         }
+
+        h1{
+            margin-bottom: 25px;
+        }
+    }
+
+    .weird_line{
+        border-bottom: 5px solid $light;
+        width: 100px;
+        margin: 0;
     }
 
 }
@@ -26,7 +37,7 @@
 .greeting-section{
     display: flex;
     justify-content: flex-end;
-    text-align: center;
+    text-align: right;
     background: url(asset-path("greeting_hero_image.jpg"));
     background-position: bottom;
     background-size: cover;
@@ -36,19 +47,15 @@
     .inner {
         padding-top: 100px;
         padding-bottom: 100px;
-        align-items: center;
+        align-items: flex-end;
         background: transparentize(
             // darken(black, 7%),
             // darken($dark, 7%),
-            black,
-            // darken($main-color, 4%),
-            5 / 100
+            // black,
+            darken($main-color, 10%),
+            15 / 100
             );
         width: -webkit-fill-available;
-    }
-
-    h1{
-        border-color: $light;
     }
 
     .inline{
@@ -57,7 +64,11 @@
 
     .btn-highlighted{
         color: $dark;
-        background-color: $light-secondary;
+        background-color: $light;
+
+        &:hover{
+            background: darken($light, 10%);
+        }
     }
 
 }
@@ -86,5 +97,9 @@
     .inner {
         align-items: flex-end;
         background: transparentize($light, 0.05);
+    }
+    
+    .weird_line{
+        border-color: $dark;
     }
 }
