--- a/app/assets/stylesheets/session-form.scss
+++ b/app/assets/stylesheets/session-form.scss
@@ -6,10 +6,6 @@
     color: $dark-secondary;
     width: 100%;
     height: 100%;
-
-    .btn-highlighted{
-        background: $dark;
-    }
 }
 
 .session-form-container{
